# agentusage-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: agentusage.rb
bundled_plugins/: NOTICE
bundled_plugins/opencode-go/: plugin.json
npm/: package.json
src/: config.rs  credential.rs  main.rs  recommendation.rs  snapshot.rs
src/commands/: configure.rs  mod.rs  plugins.rs  providers.rs  status.rs
src/plugin_runtime/: host_api.rs  manifest.rs  mod.rs  runtime.rs
