[package]
name = "agentusage-cli"
version = "0.1.0"
edition = "2021"
description = "AI provider usage monitor — agent skill for model selection"
homepage = "https://agentusage.dev"
repository = "https://github.com/ForgeRelayAI/agentusage-cli"
license = "MIT"

[[bin]]
name = "au"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# JS plugin runtime — must match robinebers/openusage
rquickjs = { version = "0.11", features = ["bindgen"] }

# HTTP for plugin host_api — blocking (rquickjs is synchronous)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Credential storage (macOS Keychain, Windows Credential Manager, Linux libsecret)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite for ctx.host.sqlite.* — bundled for portability
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Platform directories (app data dir, home dir)
dirs = "5"

# UUID for machine_id
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Regex (URL/credential redaction in logs)
regex-lite = "0.1"

# base64 (icon data URLs)
base64 = "0.22"

# Interactive configure wizard
dialoguer = "0.11"

# Colored terminal output
owo-colors = { version = "4", features = ["supports-colors"] }

# URL parsing (for host_api http)
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
